<resources>
    <string name="app_name">Day Diary</string>

    <!--<Admob ads>-->
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitia_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--    <string name="admob_app_id"> ca-app-pub-4310459535775382~4120417068</string>-->
    <!--    <string name="banner_ad_unit_id">ca-app-pub-4310459535775382/6675617589</string>-->
    <!--    <string name="interstitia_ad_unit_id">ca-app-pub-4310459535775382/7661396192</string>-->


    <!--< Fb Ads>-->
    <string name="fb_ad_banner_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="fb_ad_interstitia_id">ca-app-pub-3940256099942544/6300978111</string>

    <!--<ONESIGNAL_APP_ID>-->
    <string name="ONESIGNAL_APP_ID">########-####-####-####-############</string>


    <string name="made_with_in_srilanka">Made With ❤ in India</string>

    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="settings">Settings</string>
    <string name="company">Company</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="about_us">About Us</string>
    <string name="version">Version</string>
    <string name="share_app">Share App</string>
    <string name="share">Share</string>
    <string name="note_title">Title</string>
    <string name="note_subtitle">Subtitle</string>
    <string name="type_note_here">Type here..</string>
    <string name="add_image">Add Image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete?</string>
    <string name="recycle_bin">Recycle bin</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="move_to_recycle_bin">Move to Recycle bin</string>
    <string name="are_you_sure_you_want_to_move_to_recycle_bin_this_note">Are you sure you want to Move to Recycle bin this note?</string>
    <string name="imageseve">ImageSeve</string>
    <string name="click_here">Click Here</string>
    <string name="todo">TODO</string>
    <string name="this_content_is_deleted">This content is deleted</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="home">Home</string>
    <string name="search_note">Search</string>

    <!-- Toast -->
    <string name="toast_bold">Bold</string>
    <string name="toast_italic">Italic</string>
    <string name="toast_underline">Underline</string>
    <string name="toast_strikethrough">Strikethrough</string>
    <string name="toast_bullet">Bullet</string>
    <string name="toast_quote">Quote</string>
    <string name="toast_format_clear">Format clear</string>

    <string name="server_error">Server Error</string>
    <string name="error_connect_net_tryagain">Please connect to internet and try again</string>
    <string name="try_again">Try Again</string>
    <string name="error_nemosofts_key">Error Nemosofts key</string>
    <string name="create_nemosofts_key">Create a new nemosofts key</string>
    <string name="err_internet_not_conn">err internet</string>
    <string name="exit">Exit</string>
    <string name="select_image">Select Image</string>

    <string name="clear_cache">Clear Cache</string>
    <string name="cache_cleared">Cache Cleared</string>
    <string name="clearing_cache">Clearing Cache..</string>
    <string name="how_s_your_day">How is your day?</string>
    <string name="how_was_your_day">How was your day?</string>
    <string name="text_tools">Text Tools</string>
    <string name="select_theme">Select Theme</string>

</resources>