<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/BackgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:background="?BackgroundColor"
        android:id="@+id/toolbar_setting"
        android:layout_width="match_parent"
        app:titleTextColor="?BackgroundTint"
        app:navigationIcon="?attr/icon_a"
        app:title="@string/settings"
        android:minHeight="?attr/actionBarSize"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry,UnusedAttribute">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#26FF0267"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_brightness_4_black_24dp"
                    app:tint="#FF0267"
                    tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />


                <TextView
                    android:textAlignment="viewStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:text="@string/dark_mode"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?attr/BackgroundTint" />

                <com.nemosofts.library.SwitchButton.SwitchButton
                    android:id="@+id/switch_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:sb_checked="true"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/ll_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent"
                android:background="?attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry">

                    <ImageView
                        android:layout_centerVertical="true"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="10dp"
                        android:layout_gravity="center"
                        android:padding="12dp"
                        android:backgroundTint="#2626C6DA"
                        android:background="@drawable/abs_history_playlist"
                        android:src="@drawable/ic_clean_code"
                        app:tint="#26C6DA"
                        tools:ignore="ObsoleteLayoutParam" />


                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="60dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:paddingStart="17dp"
                        android:text="@string/clear_cache"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="?attr/Titel_1" />

                    <TextView
                        android:id="@+id/tv_cachesize"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:gravity="center_vertical"
                        android:paddingStart="20dp"
                        android:paddingEnd="20dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="?Titel_1" />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_clean_code"
                        android:layout_marginRight="20dp"
                        android:layout_marginEnd="20dp"
                        android:padding="4dp"
                        android:layout_gravity="center_vertical"
                        app:tint="?BackgroundTint" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/lockScreen"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry,UnusedAttribute">

                <com.nemosofts.library.IconImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#376E9600"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_lock"
                    app:tint="#6E9600"
                    tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />


                <TextView
                    android:textAlignment="viewStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:text="@string/lock_screen"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?attr/BackgroundTint" />


            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:id="@+id/nav_about"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#26FFBA00"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_support"
                    app:tint="#FFBA00"
                    tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />


                <TextView
                    android:textAlignment="viewStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:text="@string/about_us"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?attr/BackgroundTint" />


            </LinearLayout>

            <LinearLayout
                android:visibility="gone"
                android:layout_marginBottom="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry,UnusedAttribute,UselessParent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#2600DD5A"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_error"
                    app:tint="#00DD5A"
                    tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />


                <LinearLayout
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_weight="1"
                        android:text="@string/version"
                        android:textSize="17dp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="?attr/BackgroundTint"
                        tools:ignore="SpUsage" />
                    <TextView
                        android:id="@+id/version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:layout_weight="1"
                        android:text="1.0.0"
                        android:textSize="17sp"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="?attr/BackgroundTint"
                        tools:ignore="HardcodedText" />
                </LinearLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="10dp"
                android:id="@+id/nav_share"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingEnd="10dp"
                tools:ignore="RtlSymmetry,UselessParent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_centerVertical="true"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center"
                    android:padding="12dp"
                    android:backgroundTint="#26607D8B"
                    android:background="@drawable/abs_history_playlist"
                    android:src="@drawable/ic_share"
                    app:tint="#607d8b"
                    tools:ignore="ObsoleteLayoutParam,RtlHardcoded" />


                <TextView
                    android:textAlignment="viewStart"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_weight="1"
                    android:text="Rate Us 5 Stars"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?attr/BackgroundTint" />


            </LinearLayout>

            <RelativeLayout
                android:layout_gravity="bottom"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginBottom="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/made_with_in_srilanka"
                    android:textColor="#607d8b"
                    android:textAlignment="center"
                    android:textStyle="bold" />
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>