<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/create_i"
    android:background="?attr/BackgroundColor"
    tools:context=".Activity.Note.CreateNoteActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_80sdp"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/create_toolbar_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="?attr/icon_a"
                app:title="@string/app_name"
                app:titleTextColor="?attr/BackgroundTint"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/create_inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="?attr/Titel_1"
                android:textColorHint="?attr/Titel_2"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/create_toolbar_note" />

            <ImageView
                android:id="@+id/create_mood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_baseline_emoji_emotions_24"
                app:layout_constraintBottom_toTopOf="@id/create_textDeteTime"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/create_textDeteTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:textColor="?attr/Titel_2"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="@id/create_inputNoteTitle"
                app:layout_constraintStart_toStartOf="@id/create_inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@id/create_inputNoteTitle" />

            <EditText
                android:id="@+id/create_inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:background="@null"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:textColor="?attr/Titel_1"
                android:textColorHint="?attr/Titel_2"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/create_viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/create_textDeteTime" />


            <View
                android:id="@+id/create_viewSubtitleIndicator"
                android:layout_width="@dimen/_5sdp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_12sdp"
                android:background="@drawable/background_subtitle_indicr"
                app:layout_constraintBottom_toBottomOf="@id/create_inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/create_inputNoteSubtitle" />


            <LinearLayout
                android:id="@+id/create_layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12ssp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_12ssp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/create_inputNoteSubtitle"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/create_textWebURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/_13ssp" />

                <ImageView
                    android:id="@+id/create_imageRemoveWebURL"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorDelete" />

            </LinearLayout>

            <HorizontalScrollView
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12ssp"
                app:layout_constraintTop_toBottomOf="@id/create_layoutWebURL"
                tools:ignore="MissingConstraints">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/create_imageNote"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_180sdp"
                        android:visibility="gone"
                        android:adjustViewBounds="true"
                        app:riv_corner_radius="@dimen/_10sdp" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/create_imageNote2"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_180sdp"
                        android:visibility="gone"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:riv_corner_radius="@dimen/_10sdp" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/create_imageNote3"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_180sdp"
                        android:visibility="gone"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"
                        app:riv_corner_radius="@dimen/_10sdp" />

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/create_imageNote4"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_180sdp"
                        android:visibility="gone"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:adjustViewBounds="true"
                        app:riv_corner_radius="@dimen/_10sdp" />
                </LinearLayout>
            </HorizontalScrollView>

            <ImageView
                android:id="@+id/create_imageRemoveImage"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/backround_delate"
                android:contentDescription="@string/todo"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/images"
                app:layout_constraintTop_toTopOf="@+id/images"
                app:tint="@color/colorWhite" />

            <com.nemosofts.library.NemosoftsText.NemosoftsEditText
                android:id="@+id/create_inputNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:background="@android:color/transparent"
                android:gravity="top|start"
                android:hint="@string/type_note_here"
                android:minHeight="@dimen/_200sdp"
                android:paddingStart="16dp"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingEnd="16dp"
                android:paddingRight="16dp"
                android:scrollbars="vertical"
                app:bulletColor="@color/blue_500"
                app:bulletGapWidth="@dimen/bullet_gap_width"
                app:bulletRadius="@dimen/bullet_radius"
                app:historyEnable="true"
                app:historySize="99"
                app:layout_constraintBottom_toTopOf="@+id/adView_create"
                app:layout_constraintTop_toBottomOf="@id/images"
                app:linkColor="@color/blue_500"
                app:linkUnderline="true"
                app:quoteCapWidth="@dimen/quote_gap_width"
                app:quoteColor="@color/blue_500"
                app:quoteStripeWidth="@dimen/quote_stripe_width" />


            <LinearLayout
                android:id="@+id/adView_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/create_inputNote" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/layout_mis" />

    <include layout="@layout/layout_mis2" />

    <include layout="@layout/layout_mis3" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/BackgroundColor_S"
        android:scrollbars="none"
        android:visibility="gone"
        app:behavior_peekHeight="@dimen/_40sdp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bold"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_format_bold"
                android:tint="?attr/BackgroundTint" />

            <ImageButton
                android:id="@+id/italic"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_format_italic"
                android:tint="?attr/BackgroundTint" />

            <ImageButton
                android:id="@+id/underline"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_format_underline"
                android:tint="?attr/BackgroundTint" />

            <ImageButton
                android:id="@+id/strikethrough"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_format_strikethrough"
                android:tint="?attr/BackgroundTint" />

            <ImageButton
                android:id="@+id/bullet"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_format_bullet"
                android:tint="?attr/BackgroundTint" />

            <ImageButton
                android:id="@+id/quote"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_format_quote"
                android:tint="?attr/BackgroundTint" />


            <ImageButton
                android:id="@+id/clear"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?android:selectableItemBackground"
                android:contentDescription="@null"
                android:scaleType="center"
                android:src="@drawable/ic_format_clear"
                android:tint="?attr/BackgroundTint" />

        </LinearLayout>

    </HorizontalScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>